--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ authors = ["norcon <w7654e@gmail.com>"]
 # The core APIs, including the Serialize and Deserialize traits. Always
 # required when using Serde.
 serde = "1.0"
+rand = "0.5.5"
+num-derive = "0.2.2"
+num-traits = "0.2.5"
+
+
 
 # Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
 # to work for structs and enums defined in your crate.
